--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TestProject">
-        <activity android:name=".CurrentVictimActivity"></activity>
+        <activity android:name=".AddVictimActivity"></activity>
+        <activity android:name=".CurrentStatementActivity" />
+        <activity android:name=".StatementActivity" />
+        <activity android:name=".CurrentVictimActivity" />
         <activity android:name=".VictimActivity" />
         <activity android:name=".MenuActivity" />
         <!--
