--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TestProject">
-        <activity android:name=".AddVictimActivity"></activity>
+        <activity android:name=".CurrentPeriodSentenceActivity"></activity>
+        <activity android:name=".PeriodSentenceActivity" />
+        <activity android:name=".AddSentenceActivity" />
+        <activity android:name=".CurrentSentenceActivity" />
+        <activity android:name=".SentenceActivity" />
+        <activity android:name=".AddCriminal_caseActivity" />
+        <activity android:name=".CurrentCriminal_caseActivity" />
+        <activity android:name=".Criminal_caseActivity" />
+        <activity android:name=".AddAccusedActivity" />
+        <activity android:name=".CurrentAccusedActivity" />
+        <activity android:name=".AccusedActivity" />
+        <activity android:name=".CurrentOrganEmployeeActivity" />
+        <activity android:name=".Organ_EmployeeActivity" />
+        <activity android:name=".AddStatementActivity" />
+        <activity android:name=".AddVictimActivity" />
         <activity android:name=".CurrentStatementActivity" />
         <activity android:name=".StatementActivity" />
         <activity android:name=".CurrentVictimActivity" />
